--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "proxy": "http://localhost:5000/server/",
   "scripts": {
     "start": "index.js",
     "dev": "nodemon index.js",
